--- a/mysql/mysql-pv.yaml
+++ b/mysql/mysql-pv.yaml
@@ -10,7 +10,7 @@ spec:
     - ReadWriteOnce
   storageClassName:  standard #持久卷存储类型，它需要与持久卷申请的类型相匹配
   local:
-    path: /home/vagrant/database/mysql #宿主机的目录
+    path: /home/k8s_pv/database/mysql #宿主机的目录
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -18,7 +18,7 @@ spec:
             - key: kubernetes.io/hostname
               operator: In
               values:
-                - minikube # Node的名字
+                - kube-node114 #minikube # Node的名字
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -29,7 +29,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  # storageClassName:  # 这里的存储类型注释掉了
+  storageClassName: standard # 这里的存储类型注释掉了
   resources:
     requests:
       storage: 1Gi #1 GB
